# magnum-integration

modules/: FindOVRAvatarSDK.cmake  FindOVRPlatformSDK.cmake
src/Magnum/OvrPlatformIntegration/: AvatarShader.cpp  AvatarShader.frag  AvatarShader.h  AvatarShader.vert  CMakeLists.txt  OvrPlatformIntegration.cpp  OvrPlatformIntegration.h  resources.conf
